[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ts_utils"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pyNastran",
    "h5py",
]

[tool.setuptools]
# The repo root IS the package (no ts_utils/ subdirectory),
# so map the package name "ts_utils" to the current directory "."
package-dir = {"ts_utils" = "."}
packages = ["ts_utils", "ts_utils.AR_interpolation", "ts_utils.pv_utils"]
